# obfsck

./: .coderabbit.yaml  .envrc.example  .gitignore  .gitleaks.toml  CLAUDE.md  CODE_PERMUTATION_TEST_PLAN.md  Cargo.toml  HANDOFF.md  HANDOFF.obfsck.workspace.yaml  Justfile  README.md  build.rs  clippy.toml  config.yaml  deny.toml  mise.toml
.claude/: settings.json
.ctx/: HANDOFF.md  HANDOFF.obfsck.obfsck.yaml
.githooks/: pre-commit  pre-push
.github/: secret_scanning.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
benches/: full_obfuscation.rs  user_obfuscation.rs
config/: secrets.yaml
demo/: demo.py
demo/examples/: 00_levels.yaml  01_ai_apis.yaml  02_cloud.yaml  03_version_control.yaml  04_communication.yaml  05_payments.yaml  06_databases.yaml  07_package_managers.yaml  08_monitoring.yaml  09_generic.yaml  10_paranoid_patterns.yaml  11_pii.yaml  12_structural.yaml  13_log_block.yaml  14_github_and_identity.yaml  15_home_paths.yaml  16_maestro_session.yaml
docs/superpowers/plans/: 2026-03-19-yaml-secret-config.md  2026-03-24-visual-demo.plan.md  2026-03-25-p0-p2-remediation.md  2026-03-25-redact-cli-features.md  2026-04-02-codegen-secrets-rs.md
docs/superpowers/specs/: 2026-03-23-visual-demo-design.plan.md  2026-04-06-obfsck-mcp-server-design.md
examples/: README.md  alert-pipeline-integration.md  batch-backfill-redaction.md  batch_redaction.rs  inspect_schema.rs  large_payload.rs  obfuscate_alert.rs  obfuscate_text.rs  streaming-log-redaction.md
scripts/: preflight.nu
src/: alert_analyzer.rs  analysis_api.rs  analyzer.rs  api.rs  helpers.rs  json_utils.rs  lib.rs  log_agents.rs  logging.rs  logs.rs  ports.rs  schema.rs  secret_patterns.rs  secrets.rs
src/adapters/: gitleaks.rs  mod.rs  regex_patterns.rs
src/analyzer/: cli.rs  config.rs  mod.rs  parsing.rs  prompts.rs  providers.rs
src/api/: mod.rs  render.rs
src/clients/: client_utils.rs  http.rs  loki.rs  mod.rs  normalize.rs  victoria.rs
src/logs/: http.rs  loki.rs  victoria.rs
src/mcp/: mod.rs  protocol.rs
tests/: baml_schema_validation.rs  codegen_smoke.rs  conformance.rs  golden_tests.rs  obfuscation.rs  public_api_data.rs  redact_features.rs  redact_yaml.rs  test_analyzer_helpers.rs  test_api_helpers.rs  test_audit_counts.rs  test_base64_tokens.rs  test_bin_defaults.rs  test_logging.rs  test_mcp.rs  test_obfuscation.rs  test_redact_cli.rs  test_structured_logging_output.rs  test_yaml_parser.rs
tests/conformance_tests/: auditor.rs  filter_suggester.rs  log_client.rs  mod.rs  pattern_source.rs  secret_scanner.rs
tests/fixtures/: demo-secrets.txt  malformed_secrets.yaml  sample_llm_response.json
tests/fixtures/expected/minimal/: mixed_sample.txt  paranoid_sample.txt  pii_sample.txt  secrets_sample.txt
tests/fixtures/expected/paranoid/: mixed_sample.txt  paranoid_sample.txt  secrets_sample.txt
tests/fixtures/expected/standard/: mixed_sample.txt  paranoid_sample.txt  pii_sample.txt
tests/fixtures/inputs/: mixed_sample.txt  secrets_sample.txt
