[package]
name = "obfsck"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"

[features]
legacy-user-scan = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "user_obfuscation"
harness = false

[[bench]]
name = "full_obfuscation"
harness = false
