[package]
name = "obfsck"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

# Optional deps gated behind "analyzer" feature
axum = { version = "0.8", optional = true }
chrono = { version = "0.4", features = ["clock", "serde"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
serde_yaml = { version = "0.9", optional = true }
sha2 = { version = "0.10", optional = true }
shellexpand = { version = "3", optional = true }
simplify_baml = { version = "0.2.0", optional = true }
simplify_baml_macros = { version = "0.2.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"], optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"], optional = true }
tracing-appender = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"], optional = true }
walkdir = { version = "2", optional = true }
indexmap = { version = "2.13.0", features = ["serde"] }

[features]
default = ["analyzer"]
analyzer = [
    "axum",
    "chrono",
    "clap",
    "reqwest",
    "serde_yaml",
    "sha2",
    "shellexpand",
    "simplify_baml",
    "simplify_baml_macros",
    "tokio",
    "tower-http",
    "tracing-appender",
    "tracing-subscriber",
    "walkdir",
]
legacy-user-scan = []
path-policy-home-user-redact = []
path-policy-non-allowlisted-redact = []

[dev-dependencies]
criterion = "0.5"
regex = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
tempfile = "3"

[[bin]]
name = "redact"
path = "src/bin/redact.rs"
required-features = ["analyzer"]

[[bin]]
name = "analyzer"
path = "src/bin/analyzer.rs"
required-features = ["analyzer"]

[[bin]]
name = "api"
path = "src/bin/api.rs"
required-features = ["analyzer"]

[[example]]
name = "inspect_schema"
required-features = ["analyzer"]

[[bench]]
name = "user_obfuscation"
harness = false

[[bench]]
name = "full_obfuscation"
harness = false
